--- a/debian/rules
+++ b/debian/rules
@@ -64,6 +64,7 @@ configure-stamp:
 	--with-rsvg \
 	--with-devil \
 	--with-gts \
+	--without-ortho \
 	--without-sfdp \
 	--without-smyrna \
 	--disable-sharp \
