--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,7 +2,7 @@
 ## Process this file with automake to produce Makefile.in
 
 SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
-	vpsc rbtree sparse patchwork expr common \
+	vpsc rbtree ortho sparse patchwork expr common \
 	pack gvc xdot ingraphs topfish glcomp \
 	circogen dotgen fdpgen neatogen twopigen sfdpgen
 
