--- a/lib/neatogen/Makefile.am
+++ b/lib/neatogen/Makefile.am
@@ -12,6 +12,7 @@ AM_CPPFLAGS = \
         -I$(top_srcdir)/lib/common \
         -I$(top_srcdir)/lib/gvc \
         -I$(top_srcdir)/lib/pack \
+        -I$(top_srcdir)/lib/ortho \
         -I$(top_srcdir)/lib/pathplan \
         -I$(top_srcdir)/lib/$(GRAPH) \
         -I$(top_srcdir)/lib/sfdpgen \
