Back out previous commit; somehow arif committed the Makefile.am for share/icons

--- a/share/gui/Makefile.am
+++ b/share/gui/Makefile.am
@@ -2,18 +2,11 @@
 # ## Process this file with automake to produce Makefile.in
 #
 
-iconsdir = $(pkgdatadir)/smyrna
-icons = add_edge.png AntiselectRect.png AntiselectRectX.png cursor.png \
-	deletE_edge.png delete_node.png find_edge.png find_node.png \
-	fit_to_screen.png hourglass.png magifier_zoom_out.png magnifier.png \
-	magnifier_zoom_in.png move.png new_delete.png new_node.png \
-	newzoom.png pan.png select.png selectx.png zoom_in.png \
-	zoom_out.png zoom.png \
-	fisheye.raw ok.raw ok2.raw ok3.raw pan.raw zoom.raw \
-	zoomminus.raw zoomplus.raw rotate.raw
+guidir = $(pkgdatadir)/smyrna
+gui = smyrna.glade attrs.txt arial.tga template.dot
 
 if WITH_SMYRNA
-icons_DATA = $(icons)
+gui_DATA = $(gui)
 endif
 
-EXTRA_DIST = $(icons)
+EXTRA_DIST = $(gui)
