--- a/macosx/prebuild/Makefile.tiger
+++ b/macosx/prebuild/Makefile.tiger
@@ -4,11 +4,6 @@ CURL=curl
 MAKE=make
 TAR=tar
 
-PREFIX=$(HOME)/FIX/tiger
-PREFIX_INCLUDE=$(PREFIX)/include
-PREFIX_LIB=$(PREFIX)/lib
-PREFIX_BIN=$(PREFIX)/bin
-
 # package URL
 
 PKGCONFIG_URL=http://pkgconfig.freedesktop.org/releases/pkg-config-0.23.tar.gz
@@ -60,10 +55,10 @@ PANGO_DIR=$(call dirname, $(PANGO_URL))
 # -arch to build 32-bit/64-bit Universal Binaries
 # pkgconfig to look for X11 libraries too
 
-BASE_CONFIG=--prefix=$(PREFIX) --disable-dependency-tracking --enable-static=yes --enable-shared=no PKG_CONFIG="$(PREFIX_BIN)/pkg-config" PKG_CONFIG_PATH="$(PREFIX)/lib/pkgconfig:/usr/X11/lib/pkgconfig:/usr/X11R6/lib/pkgconfig"
+BASE_CONFIG=--prefix=$(PREFIX) --disable-dependency-tracking --enable-static=yes --enable-shared=no PKG_CONFIG="$(PREFIX)/bin/pkg-config" PKG_CONFIG_PATH="$(PREFIX)/lib/pkgconfig:/usr/X11/lib/pkgconfig:/usr/X11R6/lib/pkgconfig"
 FLAG_CONFIG=CFLAGS="-O2 -arch ppc -arch i386 -arch ppc64" LDFLAGS="-arch ppc -arch i386 -arch ppc64" 
 
-install: $(PREFIX_LIB)/$(PANGO) $(PREFIX_LIB)/$(GD)
+install: $(PREFIX)/lib/$(PANGO) $(PREFIX)/lib/$(GD)
 
 uninstall:
 	$(MAKE) -C $(PANGO_DIR) uninstall
@@ -104,7 +99,7 @@ distclean:
 # --with-included-modules=yes to embed pango modules within pango itself
 # link also to CoreFoundation and CoreServices because of gettext dependency
 
-$(PREFIX_LIB)/$(PANGO): $(PANGO_DIR)/pango/$(PANGO)
+$(PREFIX)/lib/$(PANGO): $(PANGO_DIR)/pango/$(PANGO)
 	@echo
 	@echo INSTALLING PANGO...
 	@echo
@@ -115,9 +110,9 @@ $(PANGO_DIR)/pango/$(PANGO): $(PANGO_DIR)/Makefile
 	@echo MAKING PANGO...
 	@echo
 	if [[ -e $@ ]]; then $(MAKE) -C $(PANGO_DIR) clean; fi && \
-	PATH=$(PATH):$(PREFIX_BIN) $(MAKE) -C $(PANGO_DIR)
+	PATH=$(PATH):$(PREFIX)/bin $(MAKE) -C $(PANGO_DIR)
 	
-$(PANGO_DIR)/Makefile: $(PREFIX_LIB)/$(CAIRO) $(PREFIX_LIB)/$(GLIB) | $(PREFIX_BIN)/$(PKGCONFIG) $(PANGO_DIR)/configure
+$(PANGO_DIR)/Makefile: $(PREFIX)/lib/$(CAIRO) $(PREFIX)/lib/$(GLIB) | $(PREFIX)/bin/$(PKGCONFIG) $(PANGO_DIR)/configure
 	@echo
 	@echo CONFIGURING PANGO...
 	@echo
@@ -143,7 +138,7 @@ $(PANGO_DIR).tar.gz:
 # run configure once for each architecture, capturing config.h and glibconfig.h
 # run configure again for Universal Binary, recomposing config.h and glibconfig.h from captured versions
 
-$(PREFIX_LIB)/$(GLIB): $(GLIB_DIR)/glib/$(GLIB)
+$(PREFIX)/lib/$(GLIB): $(GLIB_DIR)/glib/$(GLIB)
 	@echo
 	@echo INSTALLING GLIB...
 	@echo
@@ -156,7 +151,7 @@ $(GLIB_DIR)/glib/$(GLIB): $(GLIB_DIR)/Makefile
 	if [[ -e $@ ]]; then $(MAKE) -C $(GLIB_DIR) clean; fi && \
 	$(MAKE) -C $(GLIB_DIR)
 	
-$(GLIB_DIR)/Makefile: $(PREFIX_LIB)/$(INTL) | $(PREFIX_BIN)/$(PKGCONFIG) $(GLIB_DIR)/configure 
+$(GLIB_DIR)/Makefile: $(PREFIX)/lib/$(INTL) | $(PREFIX)/bin/$(PKGCONFIG) $(GLIB_DIR)/configure 
 	@echo
 	@echo CONFIGURING GLIB...
 	@echo
@@ -171,29 +166,29 @@ $(GLIB_DIR)/Makefile: $(PREFIX_LIB)/$(INTL) | $(PREFIX_BIN)/$(PKGCONFIG) $(GLIB_
 	echo "ac_cv_func_posix_getgrgid_r=yes" >>darwin.cache && \
 	echo "ac_cv_func_vsnprintf_c99=yes" >>darwin.cache && \
 	echo "ac_cv_func_printf_unix98=yes" >>darwin.cache && \
-	PATH=$(PREFIX_BIN):gobject:$$PATH && \
+	PATH=$(PREFIX)/bin:gobject:$$PATH && \
 	echo --- GLIB-GENMARSHAL PASS --- && \
-	./configure $(BASE_CONFIG) --with-libiconv=gnu CFLAGS="-I$(PREFIX_INCLUDE)" LDFLAGS="-L$(PREFIX_LIB)" && \
+	./configure $(BASE_CONFIG) --with-libiconv=gnu CFLAGS="-I$(PREFIX)/include" LDFLAGS="-L$(PREFIX)/lib" && \
 	$(MAKE) -C glib && \
 	$(MAKE) -C gobject glib-genmarshal && \
 	cp darwin.cache darwinian.cache && \
 	echo --- PPC PASS --- && \
-	./configure --cache-file=darwinian.cache --build=$$BUILD --host=powerpc-apple-darwin$$OSREL $(BASE_CONFIG) --with-libiconv=gnu CFLAGS="-O2 -arch ppc -I$(PREFIX_INCLUDE)" LDFLAGS="-arch ppc -L$(PREFIX_LIB)" && \
+	./configure --cache-file=darwinian.cache --build=$$BUILD --host=powerpc-apple-darwin$$OSREL $(BASE_CONFIG) --with-libiconv=gnu CFLAGS="-O2 -arch ppc -I$(PREFIX)/include" LDFLAGS="-arch ppc -L$(PREFIX)/lib" && \
 	cp config.h config.ppc.h && \
 	cp glibconfig.h glibconfig.ppc.h && \
 	cp darwin.cache darwinian.cache && \
 	echo --- I386 PASS --- && \
-	./configure --cache-file=darwinian.cache --build=$$BUILD --host=i686-apple-darwin$$OSREL $(BASE_CONFIG) --with-libiconv=gnu CFLAGS="-O2 -arch i386 -I$(PREFIX_INCLUDE)" LDFLAGS="-arch i386 -L$(PREFIX_LIB)" && \
+	./configure --cache-file=darwinian.cache --build=$$BUILD --host=i686-apple-darwin$$OSREL $(BASE_CONFIG) --with-libiconv=gnu CFLAGS="-O2 -arch i386 -I$(PREFIX)/include" LDFLAGS="-arch i386 -L$(PREFIX)/lib" && \
 	cp config.h config.i386.h && \
 	cp glibconfig.h glibconfig.i386.h && \
 	cp darwin.cache darwinian.cache && \
 	echo --- PPC64 PASS --- && \
-	./configure --cache-file=darwinian.cache --build=$$BUILD --host=powerpc-apple-darwin$$OSREL $(BASE_CONFIG) --with-libiconv=gnu CFLAGS="-O2 -arch ppc64 -I$(PREFIX_INCLUDE)" LDFLAGS="-arch ppc64 -L$(PREFIX_LIB)" && \
+	./configure --cache-file=darwinian.cache --build=$$BUILD --host=powerpc-apple-darwin$$OSREL $(BASE_CONFIG) --with-libiconv=gnu CFLAGS="-O2 -arch ppc64 -I$(PREFIX)/include" LDFLAGS="-arch ppc64 -L$(PREFIX)/lib" && \
 	cp config.h config.ppc64.h && \
 	cp glibconfig.h glibconfig.ppc64.h && \
 	cp darwin.cache darwinian.cache && \
 	echo --- UNIVERSAL BINARY PASS --- && \
-	./configure $(BASE_CONFIG) --with-libiconv=gnu CFLAGS="-O2 -arch ppc -arch i386 -arch ppc64 -I$(PREFIX_INCLUDE)" LDFLAGS="-arch ppc -arch i386 -arch ppc64 -L$(PREFIX_LIB)" && \
+	./configure $(BASE_CONFIG) --with-libiconv=gnu CFLAGS="-O2 -arch ppc -arch i386 -arch ppc64 -I$(PREFIX)/include" LDFLAGS="-arch ppc -arch i386 -arch ppc64 -L$(PREFIX)/lib" && \
 	rm config.h && \
 	echo "#if defined(__ppc__)" >>config.h && \
 	cat config.ppc.h >>config.h && \
@@ -229,7 +224,7 @@ $(GLIB_DIR).tar.gz:
 # gettext
 #
 
-$(PREFIX_LIB)/$(INTL): $(GETTEXT_DIR)/gettext-runtime/intl/$(INTL)
+$(PREFIX)/lib/$(INTL): $(GETTEXT_DIR)/gettext-runtime/intl/$(INTL)
 	@echo
 	@echo INSTALLING GETTEXT...
 	@echo
@@ -242,7 +237,7 @@ $(GETTEXT_DIR)/gettext-runtime/intl/$(INTL): $(GETTEXT_DIR)/Makefile
 	if [[ -e $@ ]]; then $(MAKE) -C $(GETTEXT_DIR) clean; fi && \
 	$(MAKE) -C $(GETTEXT_DIR)
 	
-$(GETTEXT_DIR)/Makefile: $(PREFIX_LIB)/$(LIBICONV) | $(GETTEXT_DIR)/configure
+$(GETTEXT_DIR)/Makefile: $(PREFIX)/lib/$(LIBICONV) | $(GETTEXT_DIR)/configure
 	@echo
 	@echo CONFIGURING GETTEXT...
 	@echo
@@ -264,7 +259,7 @@ $(GETTEXT_DIR).tar.gz:
 # libiconv
 #
 
-$(PREFIX_LIB)/$(LIBICONV): $(LIBICONV_DIR)/$(LIBICONV)
+$(PREFIX)/lib/$(LIBICONV): $(LIBICONV_DIR)/$(LIBICONV)
 	@echo
 	@echo INSTALLING LIBICONV...
 	@echo
@@ -301,7 +296,7 @@ $(LIBICONV_DIR).tar.gz:
 # patch to fence missing ATSUI API in 64-bit
 # patch to require pixman-1 in linking
 
-$(PREFIX_LIB)/$(CAIRO): $(CAIRO_DIR)/src/$(CAIRO)
+$(PREFIX)/lib/$(CAIRO): $(CAIRO_DIR)/src/$(CAIRO)
 	@echo
 	@echo INSTALLING CAIRO...
 	@echo
@@ -314,7 +309,7 @@ $(CAIRO_DIR)/src/$(CAIRO): $(CAIRO_DIR)/Makefile
 	if [[ -e $@ ]]; then $(MAKE) -C $(CAIRO_DIR) clean; fi && \
 	$(MAKE) -C $(CAIRO_DIR) CFLAGS=-I/usr/X11R6/include
 	
-$(CAIRO_DIR)/Makefile: $(PREFIX_LIB)/$(PIXMAN) $(PREFIX_LIB)/$(LIBPNG) | $(PREFIX_BIN)/$(PKGCONFIG) $(CAIRO_DIR)/configure
+$(CAIRO_DIR)/Makefile: $(PREFIX)/lib/$(PIXMAN) $(PREFIX)/lib/$(LIBPNG) | $(PREFIX)/bin/$(PKGCONFIG) $(CAIRO_DIR)/configure
 	@echo
 	@echo CONFIGURING CAIRO...
 	@echo
@@ -339,7 +334,7 @@ $(CAIRO_DIR).tar.gz:
 # patch to detect endianness, MMX, SSE and SSE2 during Universal Binary build
 # omit -O2 since it bombs Apple gcc
 
-$(PREFIX_LIB)/$(PIXMAN): $(PIXMAN_DIR)/pixman/$(PIXMAN)
+$(PREFIX)/lib/$(PIXMAN): $(PIXMAN_DIR)/pixman/$(PIXMAN)
 	@echo
 	@echo INSTALLING PIXMAN...
 	@echo
@@ -352,7 +347,7 @@ $(PIXMAN_DIR)/pixman/$(PIXMAN): $(PIXMAN_DIR)/Makefile
 	if [[ -e $@ ]]; then $(MAKE) -C $(PIXMAN_DIR) clean; fi && \
 	$(MAKE) -C $(PIXMAN_DIR)
 	
-$(PIXMAN_DIR)/Makefile: | $(PREFIX_BIN)/$(PKGCONFIG) $(PIXMAN_DIR)/configure 
+$(PIXMAN_DIR)/Makefile: | $(PREFIX)/bin/$(PKGCONFIG) $(PIXMAN_DIR)/configure 
 	@echo
 	@echo CONFIGURING PIXMAN...
 	@echo
@@ -375,7 +370,7 @@ $(PIXMAN_DIR).tar.gz:
 # gd
 #
 
-$(PREFIX_LIB)/$(GD): $(GD_DIR)/$(GD)
+$(PREFIX)/lib/$(GD): $(GD_DIR)/$(GD)
 	@echo
 	@echo INSTALLING GD...
 	@echo
@@ -388,7 +383,7 @@ $(GD_DIR)/$(GD): $(GD_DIR)/Makefile
 	if [[ -e $@ ]]; then $(MAKE) -C $(GD_DIR) clean; fi && \
 	$(MAKE) -C $(GD_DIR)
 	
-$(GD_DIR)/Makefile: $(PREFIX_LIB)/$(LIBPNG) | $(GD_DIR)/configure
+$(GD_DIR)/Makefile: $(PREFIX)/lib/$(LIBPNG) | $(GD_DIR)/configure
 	@echo
 	@echo CONFIGURING GD...
 	@echo
@@ -410,7 +405,7 @@ $(GD_DIR).tar.gz:
 # libpng
 #
 
-$(PREFIX_LIB)/$(LIBPNG): $(LIBPNG_DIR)/$(LIBPNG)
+$(PREFIX)/lib/$(LIBPNG): $(LIBPNG_DIR)/$(LIBPNG)
 	@echo
 	@echo INSTALLING LIBPNG...
 	@echo
@@ -423,7 +418,7 @@ $(LIBPNG_DIR)/$(LIBPNG): $(LIBPNG_DIR)/Makefile
 	if [[ -e $@ ]]; then $(MAKE) -C $(LIBPNG_DIR) clean; fi && \
 	$(MAKE) -C $(LIBPNG_DIR)
 	
-$(LIBPNG_DIR)/Makefile: $(PREFIX_LIB)/$(LIBPNG) | $(LIBPNG_DIR)/configure
+$(LIBPNG_DIR)/Makefile: $(PREFIX)/lib/$(LIBPNG) | $(LIBPNG_DIR)/configure
 	@echo
 	@echo CONFIGURING LIBPNG...
 	@echo
@@ -446,7 +441,7 @@ $(LIBPNG_DIR).tar.gz:
 #
 # only needed during build, don't need Universal Binary
 
-$(PREFIX_BIN)/$(PKGCONFIG): $(PKGCONFIG_DIR)/$(PKGCONFIG)
+$(PREFIX)/bin/$(PKGCONFIG): $(PKGCONFIG_DIR)/$(PKGCONFIG)
 	@echo
 	@echo INSTALLING PKGCONFIG...
 	@echo
