--- a/macosx/prebuild/Makefile.leopard
+++ b/macosx/prebuild/Makefile.leopard
@@ -4,6 +4,8 @@ CURL=curl
 MAKE=make
 TAR=tar
 
+PREFIX=$(HOME)/FIX/leopard
+
 # package URL
 
 PKGCONFIG_URL=http://pkgconfig.freedesktop.org/releases/pkg-config-0.23.tar.gz
@@ -11,11 +13,10 @@ GD_URL=http://www.libgd.org/releases/gd-2.0.35.tar.gz
 #PIXMAN_URL=http://cairographics.org/releases/pixman-0.10.0.tar.gz
 PIXMAN_URL=http://cairographics.org/releases/pixman-0.12.0.tar.gz
 CAIRO_URL=http://cairographics.org/releases/cairo-1.6.4.tar.gz
-#CAIRO_URL=http://cairographics.org/releases/cairo-1.8.0.tar.gz
 #CAIRO_URL=http://cairographics.org/releases/cairo-1.8.2.tar.gz
 GETTEXT_URL=ftp://mirrors.kernel.org/gnu/gettext/gettext-0.17.tar.gz
-GLIB_URL=http://ftp.gnome.org/pub/GNOME/sources/glib/2.16/glib-2.16.3.tar.gz
-#GLIB_URL=http://ftp.gnome.org/pub/gnome/sources/glib/2.18/glib-2.18.2.tar.gz
+#GLIB_URL=http://ftp.gnome.org/pub/GNOME/sources/glib/2.16/glib-2.16.3.tar.gz
+GLIB_URL=http://ftp.gnome.org/pub/gnome/sources/glib/2.18/glib-2.18.2.tar.gz
 PANGO_URL=http://ftp.gnome.org/pub/GNOME/sources/pango/1.20/pango-1.20.2.tar.gz
 #PANGO_URL=http://ftp.gnome.org/pub/GNOME/sources/pango/1.22/pango-1.22.2.tar.gz
 
