--- a/plugin/gtk/Makefile.am
+++ b/plugin/gtk/Makefile.am
@@ -14,7 +14,7 @@ AM_CPPFLAGS = \
         -I$(top_srcdir)/lib/gvc \
         -I$(top_srcdir)/lib/$(GRAPH) \
         -I$(top_srcdir)/lib/cdt \
-	$(GTK_CFLAGS) $(GNOMEUI_CFLAGS)
+	$(GTK_CFLAGS)
 
 if WITH_PANGOCAIRO
 if WITH_GTK
@@ -37,7 +37,7 @@ libgvplugin_gtk_C_la_SOURCES = \
 
 libgvplugin_gtk_la_LDFLAGS = -version-info @GVPLUGIN_VERSION_INFO@
 libgvplugin_gtk_la_SOURCES = $(libgvplugin_gtk_C_la_SOURCES)
-libgvplugin_gtk_la_LIBADD = $(GTK_LIBS) $(GNOMEUI_LIBS)
+libgvplugin_gtk_la_LIBADD = $(GTK_LIBS)
 
 if WITH_WIN32
 libgvplugin_gtk_la_LDFLAGS += -no-undefined
